--- a/alpinedge/index.html
+++ b/alpinedge/index.html
@@ -17,10 +17,10 @@
     rel="stylesheet" />
   <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
-    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow"
+    <!-- <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow"
         target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
     
-  </div>
+  </div> -->
 </body>
 
 </html>
